fix image cropper dialog

--- a/src/theme/styles/primeng/_primeng_dialog.scss
+++ b/src/theme/styles/primeng/_primeng_dialog.scss
@@ -108,15 +108,3 @@
         }
     }
 }
-
-// Rectangle image cropper dialog
-.rectangle-image-cropper-dialog.p-dialog {
-    max-width: 700px;
-    padding: 24px;
-    border-radius: 8px;
-
-    & .p-dialog-content {
-        padding: 0;
-        border-radius: 8px;
-    }
-}
